Card model wrapper no longer has max width (isn't squashed)

--- a/resources/assets/sass/react/_CardStats.scss
+++ b/resources/assets/sass/react/_CardStats.scss
@@ -25,7 +25,6 @@ canvas {
     min-height: 800px;
 
     #card-model-wrapper {
-        max-width: 600px;
         width: auto;
         overflow: hidden;
         padding: 100px 0;
